# easyAppGui

./: .project.qmlproject  README.md  pyproject.toml  requirements.txt
easyAppGui/easyAppGui/Charts/: AreaSeries.qml  ChartView.qml  LineSeries.qml  ScatterSeries.qml  ValueAxis.qml  qmldir
easyAppGui/easyAppGui/Components/: AppBarCentralTabs.qml  ApplicationWindow.qml  ContentPage.qml  MainContentTabs.qml  PreferencesDialog.qml  SideBar.qml  SideBarColumn.qml  qmldir
easyAppGui/easyAppGui/Elements/: ApplicationWindow.qml  Button.qml  CheckIndicator.qml  ComboBox.qml  CursorDelegate.qml  Dialog.qml  GroupBox.qml  Label.qml  MenuItem.qml  RemoteController.qml  RemotePointer.qml  SideBarButton.qml  StatusBar.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  qmldir
easyAppGui/easyAppGui/Globals/: Variables.qml
easyAppGui/easyAppGui/Style/: Colors.qml  Fonts.qml  Sizes.qml
easyappgui/easyAppGui/Animations/: ThemeChange.qml  TranslationChange.qml
easyappgui/easyAppGui/Components/: AppBarLeftButtons.qml  ApplicationBar.qml  ApplicationWindow.qml  ApplicationWindow2.qml  MainArea.qml  MainAreaContainer.qml  MainAreaContent.qml  MainAreaTabs.qml  MainContent.qml  MainContentItems.qml  MainContentTabs.qml  Page.qml  PagesView.qml  PreferencesDialog.qml  SideBar.qml  SideBarColumn.qml  qmldir
easyappgui/easyAppGui/Elements/: ApplicationWindow.qml  BoxShadow.qml  Button.qml  CheckBox.qml  CursorDelegate.qml  Dialog.qml  DialogButtonBox.qml  GroupBox.qml  GroupButton.qml  GroupColumn.qml  GroupRow.qml  Label.qml  (+6 more)
(+5 files in other folders)
