[tool.poetry]
name = "easyappgui"
version = "0.2.0"
description = "Generic GUI for easyScience applications"
authors = ["Andrew Sazonov", "Simon Ward"]
license = "GPL-3.0-only"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
PySide2 = "^5.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
