[tool.poetry]
name = "easyAppGui"
version = "0.2.0"
description = "Generic GUI for easyScience applications"
license = "GPL-3.0-only"
authors = ["Andrew Sazonov", "Simon Ward"]
readme = "README.md"
homepage = "https://github.com/tempscience"
repository = "https://easyscience.apptimity.com/"
documentation = "https://github.com/tempscience"
include = ["CHANGELOG.md"]
packages = [
    { include = "easyAppGui" }
]

[tool.poetry.dependencies]
python = "^3.7"
PySide2 = "^5.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
